--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,16 @@
 services:
-  x86_64: &app
+  app:
+    platform: linux/amd64
     build: 
       context: .
       dockerfile: Dockerfile
     volumes:
       - .:/app
     working_dir: /app
+    ports:
+      - 3000:3000
+    command: bin/run.bash server
     security_opt:
       - seccomp:unconfined
     cap_add:
       - SYS_PTRACE
-
-  x86_32: 
-    <<: *app
-    build: 
-      context: .
-      dockerfile: Dockerfile.x86_32
